# ad-review-agent

./: .env.example  .env.production.example  .gitignore  ADD.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  feature_list.json  progress.txt  pyproject.toml
.claude/: settings.local.json
.claude/commands/: add-case.md  new-tool.md  run-eval.md  update-prompt.md
.github/workflows/: ahf_check.yml
docs/: ingest_guide.md
evals/: cost_tracker.py  metrics.py  regression_check.py  run_eval.py
evals/golden_dataset/: adversarial_cases.jsonl  pass_cases.jsonl  reject_cases.jsonl  review_cases.jsonl
harness/: constraints.yaml  model_router.yaml  observability.yaml  tool_masks.yaml
scripts/: build_test_data.py  cleanup_check.py  init_project.py  smoke_test.py  start_server.py  user_test.py
src/: api.py  config.py  database.py  middleware.py  reporter.py  rules_loader.py  task_worker.py  uploader.py
src/agents/: decision_engine.py  orchestrator.py  result_builder.py  review_agent.py  types.py
src/harness/: constraint_loader.py  model_router.py  tracer.py
src/ingest/: __init__.py  base.py  http_adapter.py  manual_adapter.py  mq_adapter.py  router.py
src/prompts/: few_shot_examples.txt  image_checker.txt  landing_page.txt  system_prompt.txt  text_checker.txt
src/rules/: category_rules.json  consistency_rules.json  forbidden_words.json  qualification_map.json  vivo_platform.json
src/schemas/: request.py  result.py  tool_io.py  violation.py
src/templates/: base.html  detail.html  history.html  landing.html  login.html  (+6 more)
tests/: conftest.py
(+10 files in other folders)
