[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ad-review-agent"
version = "0.1.0"
description = "广告素材合规审核 Agent"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "opencv-python>=4.8.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "bcrypt>=4.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "alibabacloud_green20220302>=2.0.0",
    "aliyun-python-sdk-core>=2.13.0",
    "moviepy>=1.0.3",
    "dashscope>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
